animation effect modified

--- a/demo.html
+++ b/demo.html
@@ -118,13 +118,7 @@
                     msg: '只是另一条提示',
                     insert: '#wrap',
                     classname: 'customclass',
-                    show: function () {
-                        var self = this;
-
-                        $(self.node).slideDown();
-
-                        return self;
-                    }
+                    transfer: 'slide'
                 }).setStyle().show();
             });
 
